@@ -29,9 +29,9 @@ class DeployStrategyCopyTest < Test::Unit::TestCase
     Dir.expects(:tmpdir).returns("/temp/dir")
     @source.expects(:checkout).with("154", "/temp/dir/1234567890").returns(:local_checkout)
     @strategy.expects(:system).with(:local_checkout)
-    Dir.expects(:glob).with("/temp/dir/1234567890/.git", File::FNM_DOTMATCH).returns("/temp/dir/1234567890/.git")
+    Dir.expects(:glob).with("/temp/dir/1234567890/.git", File::FNM_DOTMATCH).returns(%w(/temp/dir/1234567890/.git))
 
-    FileUtils.expects(:rm_rf).with("/temp/dir/1234567890/.git")
+    FileUtils.expects(:rm_rf).with(%w(/temp/dir/1234567890/.git))
     prepare_standard_compress_and_copy!
     @strategy.deploy!
   end
@@ -41,9 +41,9 @@ class DeployStrategyCopyTest < Test::Unit::TestCase
     Dir.expects(:tmpdir).returns("/temp/dir")
     @source.expects(:checkout).with("154", "/temp/dir/1234567890").returns(:local_checkout)
     @strategy.expects(:system).with(:local_checkout)
-    Dir.expects(:glob).with("/temp/dir/1234567890/.gi*", File::FNM_DOTMATCH).returns("/temp/dir/1234567890/.git")
+    Dir.expects(:glob).with("/temp/dir/1234567890/.gi*", File::FNM_DOTMATCH).returns(%w(/temp/dir/1234567890/.git))
 
-    FileUtils.expects(:rm_rf).with("/temp/dir/1234567890/.git")
+    FileUtils.expects(:rm_rf).with(%w(/temp/dir/1234567890/.git))
     prepare_standard_compress_and_copy!
     @strategy.deploy!
   end
